--- a/tongpao-web/src/main/resources/application.properties
+++ b/tongpao-web/src/main/resources/application.properties
@@ -14,3 +14,8 @@ dubbo.cloud.subscribed-services=tongpao-core
 
 #如果使用Spring Boot 2.1及更高版本时候，需要增加配置
 spring.main.allow-bean-definition-overriding=true
+
+#前端模板引擎配置
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
