--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
                 <version>1.18.2</version>
                 <optional>true</optional>
             </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>5.3.5</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
