--- a/tongpao-core/src/main/resources/application.properties
+++ b/tongpao-core/src/main/resources/application.properties
@@ -15,12 +15,11 @@ spring.main.allow-bean-definition-overriding=true
 
 #druid数据源
 spring.datasource.name=test
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://47.106.134.89:3306/tongpao?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=mysql
 #druid线程池配置，注意：spring-boot-starter-parent 1.3.0版本报错，原因：hibernate-validater 和validation-api版本冲突
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #省略... 详细资料：https://segmentfault.com/a/1190000009132815
 
 #mybatis
