--- a/tongpao-security-auth/src/main/resources/application.yml
+++ b/tongpao-security-auth/src/main/resources/application.yml
@@ -39,3 +39,16 @@ spring:
     password: redis
     database: 2
 
+  # nacos
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+
+
+dubbo:
+  protocol:
+    name: dubbo
+    port: -1
+  registry:
+    address: spring-cloud://localhost
